adding footer and change some alignment for adding main in order to centered

--- a/index.html
+++ b/index.html
@@ -6,15 +6,53 @@
   <title>Learn - Get Started Today</title>
   <meta name="description" content="Learn is a platform that offers free courses for everyone. Start learning today!" />
   <!-- CSS -->
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
   <!-- Navbar section -->
+   <nav class="Navbar">
+      <img src="images/logo.png" alt="logo Image">
+      <ul>
+          <li>About me</li>
+          <li>Journey</li>
+          <li>Goals</li>
+      </ul>
+   </nav>
 
   <!-- Hero section -->
+   <div class="Hero">
+    <div class="Hero-Content">
+    <h1>Hello, I'm <br/>Mary Jane</h1>
+    <p>A web Developer</p>
+    <button>Contact me</button>
+  </div>
+  </div>
 
   <!-- Coding journey section -->
+   <div class="journey">
+    <div class="journey-content">
+      <h3>Coding Journey</h3>
+      
+      <div class="journey-card-container">
+          <div class="journey-card">
+            <img src="images/intro-to-web.png" alt="">
+            <h4>Into to Web Development</h4>
+            <span>Learned How to build <br/>Web HTML Projecs</span>
+          </div>
+          <div class="journey-card">
+            <img src="images/react.png" alt="">
+            <h4>React Development</h4>
+            <span>Learned how to build Single <br/>Page Application</span>
+          </div>
+          <div class="journey-card">
+            <img src="images/backend.png" alt="">
+            <h4>Back-end Development</h4>
+            <span>Learned How to build Back-end <br/>services</span>
+          </div>
+      </div>
+    </div>
+   </div>
 
   <!-- Footer section -->
 
