add main and footer and some css to make perfect look

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Learn - Get Started Today</title>
+  <title>Coding Journey TK</title>
   <meta name="description" content="Learn is a platform that offers free courses for everyone. Start learning today!" />
   <!-- CSS -->
   <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
+  <main>
   <!-- Navbar section -->
    <nav class="Navbar">
       <img src="images/logo.png" alt="logo Image">
@@ -23,7 +24,7 @@
   <!-- Hero section -->
    <div class="Hero">
     <div class="Hero-Content">
-    <h1>Hello, I'm <br/>Mary Jane</h1>
+    <h1>Hello, I'm <br/>KAYITSINGA Hertilan</h1>
     <p>A web Developer</p>
     <button>Contact me</button>
   </div>
@@ -55,7 +56,10 @@
    </div>
 
   <!-- Footer section -->
-
+   <footer>
+      <span>Website made by Hertilan 😎👊</span>
+   </footer>
+</main>
   <script src="./script.js"></script>
 </body>
 
