added javascript to make journey interacting and change color by clicking on cards && and also i have added id on journey section

--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
   </div>
 
   <!-- Coding journey section -->
-   <div class="journey">
+   <div id="coding-journey" class="journey" onclick="changeBackgroundColor()">
     <div class="journey-content">
       <h3>Coding Journey</h3>
       
       <div class="journey-card-container">
-          <div class="journey-card">
+          <div id="intro" class="journey-card">
             <img src="images/intro-to-web.png" alt="">
             <h4>Into to Web Development</h4>
             <span>Learned How to build <br/>Web HTML Projecs</span>
           </div>
-          <div class="journey-card">
+          <div id="react" class="journey-card">
             <img src="images/react.png" alt="">
             <h4>React Development</h4>
             <span>Learned how to build Single <br/>Page Application</span>
           </div>
-          <div class="journey-card">
+          <div id="backend" class="journey-card">
             <img src="images/backend.png" alt="">
             <h4>Back-end Development</h4>
             <span>Learned How to build Back-end <br/>services</span>
@@ -60,7 +60,8 @@
       <span>Website made by Hertilan 😎👊</span>
    </footer>
 </main>
-  <script src="./script.js"></script>
+  <script src="script.js">
+  </script>
 </body>
 
 </html>
