--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
   </div>
   </div>
 
+  <div id="about" class="about-me">
+    <h3>About Me</h3>
+    <p>I’m a passionate web developer dedicated to creating engaging and user-friendly websites. From the moment I started coding, I knew I wanted to build digital experiences that people love to use. I thrive on turning creative ideas into functional websites that make a difference.</p>
+  </div>
+
   <!-- Coding journey section -->
    <div id="coding-journey" class="journey" onclick="changeBackgroundColor()">
     <div class="journey-content">
