add goals and its style and also transition and hover effects in navbar

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
    <nav class="Navbar">
       <img src="images/logo.png" alt="logo Image">
       <ul>
-          <li>About me</li>
-          <li>Journey</li>
-          <li>Goals</li>
+          <li><a href="#about">About me</a></li>
+          <li><a href="#journey">Journey</a></li>
+          <li><a href="#goals">Goals</a></li>
       </ul>
    </nav>
 
@@ -59,6 +59,11 @@
       </div>
     </div>
    </div>
+
+   <div id="goals" class="goals">
+    <h3>My Goals</h3>
+    <p>I aspire to mentor and support other aspiring developers, sharing the knowledge and experience I’ve gained along the way. By fostering a collaborative and encouraging environment, I hope to help others achieve their own goals and grow in their careers. Building strong, supportive communities is important to me, as I believe we can achieve more together.</p>
+  </div>
 
   <!-- Footer section -->
    <footer>
