added current year and copy at footer by Javascript

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="Hero-Content">
     <h1>Hello, I'm <br/>KAYITSINGA Hertilan</h1>
     <p>A web Developer</p>
-    <button>Contact me</button>
+    <button mailto>Contact me</button>
   </div>
   </div>
 
@@ -67,7 +67,7 @@
 
   <!-- Footer section -->
    <footer>
-      <span>Website made by Hertilan 😎👊</span>
+      <span>Website made by Hertilan 😎👊 &copy; <span id="year"></span> </span>
    </footer>
 </main>
   <script src="script.js">
